# DS-MSP

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  LICENSE-NONCOMMERCIAL.txt  LICENSING.md  MANIFEST.in  README.md  RELEASING.md  SECURITY.md  calibrate.py  mkdocs.yml  pyproject.toml  release-please-config.json  requirements-dev.txt  validate.py  verify_real_samples.py  visualize.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  deploy-pages.yml  release.yml
benchmarks/: README.md  benchmark.py
datasets/: README.md
docs/: MULTI_MODEL.md  MULTI_MODEL_ADAPTER_PLAN.md  MULTI_MODEL_DEV_PROCESS.md  RIG_30_30_30_IMPROVEMENT_PLAN.md  RIG_CALIBRATION_IMPLEMENTATION.md  RIG_CALIBRATION_PLAN.md  RIG_EVALUATION_TABLE.md  RIG_MCCALIB_PARITY_AND_ROBUSTNESS.md  RIG_OUTLIER_BENCHMARK.md  ROADMAP.md  UNIFIED_CALIBRATION_VISION.md  WRITING_GUIDE.md  index.md
docs/explain/: README.md  projection_validity_and_fov.md  two_view_geometry.md
docs/how-to/: README.md  calibrate_any_model.md  convert_between_models.md  export_ldc_mesh.md  read_write_kalibr.md  solve_pnp_on_fisheye.md  undistort_images.md
docs/javascripts/: mathjax.js
docs/learn/: 01_fisheye_and_camera_models.md  02_double_sphere_model.md  03_projection_validity.md  08_two_view_geometry_on_rays.md  README.md  are_two_models_the_same_camera.md  capstone_calibrating_a_real_camera.md  robust_aprilgrid_detection.md  robust_losses_and_evaluation.md  spherical_and_cylindrical_reprojection.md  stereo_extrinsics_calibration.md  two_view_geometry.md
docs/process/: HANDBOOK.md
docs/reference/: index.md
docs/research/: README.md  book_blueprint.md  diffpnp_dsmsp_symbiosis.md  learning_docs_audit.md  mvg_two_view_geometry.md  representations_for_3d_tasks_findings.md  slam_vio_implementation_plan.md  tier1_implementation_spec.md
ds_msp/: __init__.py  cv.py  ldc.py  model.py  testing.py
ds_msp/adapt/: __init__.py  autoselect.py  convert.py  evaluate.py  sampling.py
ds_msp/calib/: __init__.py  bundle.py  charuco.py  detect.py  robust_init.py  stereo.py  targets.py
ds_msp/core/: __init__.py  contracts.py  lie.py  optimize.py  pinhole.py  robust.py
ds_msp/data/: __init__.py  dataset.py  observations.py
ds_msp/detect/: __init__.py  charuco.py  detect.py
ds_msp/geometry/: __init__.py  calibrate_core.py  graph.py  resection.py
ds_msp/io/: __init__.py  colmap.py  kalibr.py  mccalib.py  nerfstudio.py
ds_msp/models/: __init__.py  double_sphere.py  ds_math.py  dsplus.py  dsplus_math.py  eucm.py  eucm_math.py  eucmplus.py  eucmplus_math.py  kb.py  kb_math.py  ocam.py  ocam_math.py  radtan.py  radtan_math.py  registry.py  ucm.py  ucm_math.py
ds_msp/mvg/: __init__.py  bundle.py  ransac.py  two_view.py
ds_msp/ops/: __init__.py  pose.py  reproject.py  undistort.py
ds_msp/rig/: __init__.py  averaging.py  ba.py  config.py  extrinsics.py  graph.py  handeye.py  object3d.py  pose_init.py  reconstruct.py  rig_calibrate.py  run.py  types.py
ds_msp/stereo/: __init__.py  rectify.py  sphere_sweep.py
ds_msp/vo/: __init__.py  metrics.py  odometry.py
examples/: 01_realdata_fisheye_tumvi.py  02_double_sphere_tumvi.py  03_calibrate_tumvi_aprilgrid.py  04_robust_vs_rejection.py  05_model_equivalence.py  06_stereo_extrinsics_tumvi.py  07_fov_and_validity.py  08_reproject_sphere_cylinder.py  09_monocular_vo_tumvi.py  10_two_view_pose_tumvi.py
scripts/: benchmark_outliers.py  benchmark_rig.py  calibrate_rig.py  download_datasets.sh  evaluate_rig_datasets.py  make_demo_gif.py  make_learn_gifs.py  validate_model_agnostic.py  validate_param_pose.py  validate_rig.py  validate_rig_models.py
tests/: test_ds_camera_cv.py  test_robustness_and_ldc.py  verify_3d_reconstruction.py
tests/adapt/: test_autoselect.py  test_convert.py  test_convert_robustness.py
tests/calib/: test_aprilgrid_target.py  test_charuco.py  test_detect.py  test_generic_calibrate.py  test_robust_calibrate.py  test_robust_init.py  test_stereo.py
tests/contract/: test_camera_model_contract.py  test_gradcheck.py  test_independence.py
tests/core/: test_lie.py  test_optimize.py  test_robust_barron_leverage.py
tests/io/: test_colmap.py  test_kalibr.py  test_mccalib_io.py  test_nerfstudio.py
tests/models/: test_ds_model.py  test_dsplus_model.py  test_eucm_model.py  test_eucmplus_model.py  test_kb_model.py  test_ocam_model.py  test_radtan_model.py  test_ucm_model.py
tests/mvg/: test_bundle.py  test_ransac.py  test_two_view.py
tests/rig/: _synth.py  (+13 more)
tools/: check_traceability.py  check_tree_hygiene.py
web/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
(+53 files in other folders)
