[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "ds_msp"
version = "0.4.0"
description = "Double Sphere (and multi-model) fisheye camera library with model conversion"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Munna-Manoj" }]
keywords = [
    "fisheye", "camera-model", "calibration", "double-sphere",
    "computer-vision", "slam", "opencv", "kannala-brandt",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Operating System :: OS Independent",
]
dependencies = ["numpy", "opencv-python", "scipy", "pyyaml"]

[project.urls]
Homepage = "https://github.com/Munna-Manoj/DS-MSP"
Repository = "https://github.com/Munna-Manoj/DS-MSP"
Documentation = "https://github.com/Munna-Manoj/DS-MSP/tree/main/docs/learn"
Changelog = "https://github.com/Munna-Manoj/DS-MSP/blob/main/CHANGELOG.md"
Issues = "https://github.com/Munna-Manoj/DS-MSP/issues"

# Optional extras. `calib` adds the AprilGrid detector used to calibrate from real
# board images (e.g. TUM-VI). Kept optional so the core library installs lean.
[project.optional-dependencies]
calib = ["aprilgrid"]

# Package only the importable library; the top-level scripts (calibrate.py,
# validate.py, visualize.py, …) are CLI entry points, not part of the package.
# Without this, setuptools flat-layout auto-discovery is ambiguous and the build
# fails ("Multiple top-level packages discovered").
[tool.setuptools.packages.find]
include = ["ds_msp*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "jac: analytic-Jacobian gradient-check tests (run on every model PR)",
    "contract: model-agnostic contract suite",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
# Tighten per-module as the typed surface grows; core/ is fully typed.
[[tool.mypy.overrides]]
module = "ds_msp.core.*"
disallow_untyped_defs = true

# --- Decoupling rules (enforced in CI by import-linter; mirrored by the pure
# --- pytest AST gate in tests/contract/test_independence.py so they hold even
# --- without the tool installed). Layers listed high -> low; a lower layer may
# --- never import a higher one.
[tool.importlinter]
root_package = "ds_msp"

[[tool.importlinter.contracts]]
name = "core is the dependency-free foundation"
type = "forbidden"
source_modules = ["ds_msp.core"]
forbidden_modules = [
    "ds_msp.models", "ds_msp.ops", "ds_msp.adapt",
    "ds_msp.io", "ds_msp.cv", "ds_msp.ldc",
]

[[tool.importlinter.contracts]]
name = "service layers are mutually independent"
type = "independence"
modules = ["ds_msp.ops", "ds_msp.adapt", "ds_msp.calib", "ds_msp.mvg", "ds_msp.stereo"]
